# Meerkat

./: .eslintignore  .gitignore  .gitlab-ci.yml  .vscodeignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: deployment.yml  rust.yml  test.yml
client/: package-lock.json  package.json
client/src/: downloadLS.ts  extension.ts  pcapTree.ts  statusBar.ts  suricata.ts
src/: completion.rs  extension.ts  hover.rs  lib.rs  main.rs  parse.ts  parser.rs  reference.rs  rule.rs  semantic_token.rs  server_settings.rs  suricata.rs
src/rule/: action.rs  header.rs  mod.rs  options.rs
