[package]
name = "meerkat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
chumsky = "0.8.0"
ariadne = "0.1.5"
env_logger = "0.9.1"
dashmap = "5.4.0"
ropey = "1.5.0"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
tower-lsp = "0.17.0"
tokio = { version = "1.21.2", features = ["full"] }