[package]
name = "meerkat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chumsky = "0.8"
chrono = "0.4"
ariadne = "0.1"
env_logger = "0.9"
dashmap = "5"
ropey = "1"
ipnet = "2"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tower-lsp = "0.17"
tokio = { version = "1", features = ["full"] }
tempfile = "3"