[package]
name = "meerkat-ls"
version = "1.0.1"
edition = "2021"
authors = ["Tsvetomir Hristov"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
chumsky = "0.9"
chrono = "0.4"
dashmap = "6"
ropey = "1"
ipnet = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
env_logger = "0.11"
clap = { version = "4.5.17", features = ["derive"] }

[dev-dependencies]
ariadne = "0.4"
